<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />
    
    
    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
             android:inputType="textPassword"
            android:hint="@string/login_password_hint" />
    </LinearLayout>

    <LinearLayout 
        style="@style/Register_Input" >

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            style="@style/Register_Edit"
             android:inputType="textPassword"
            android:hint="@string/login_email_hint" />
    </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="选择分区" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_android"
                android:layout_width="0dp"
                android:checked="true"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="android区" />

            <RadioButton
                android:id="@+id/rb_ios"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="ios区" />
            
        </RadioGroup>
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:text="@string/register"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>